--- a/index.html
+++ b/index.html
@@ -8,23 +8,19 @@
     <title>Money minder</title>
     <style>
         :root {
-            --color-primary: #6A1B9A; /* Púrpura oscuro, elegante */
-            --color-secondary: #00BCD4; /* Cian brillante, moderno */
-            --color-accent: #8BC34A; /* Verde lima, vibrante */
-            --color-danger: #FF5252; /* Rojo vivo */
-            --color-warning: #FFC107; /* Amarillo ámbar */
-            --color-light: #ECEFF1; /* Gris muy claro */
-            --color-dark: #263238; /* Gris azulado oscuro */
-            --shadow: 0 8px 20px rgba(0, 0, 0, 0.15); /* Sombra más pronunciada pero suave */
-            --card-bg: #FFFFFF; /* Fondo de tarjeta blanco */
-            --body-bg: linear-gradient(135deg, #E0F2F7 0%, #B2EBF2 100%); /* Degradado suave para el fondo */
-
-            /* Chatbot specific colors */
-            --chatbot-bg: var(--card-bg);
-            --chatbot-bubble-bg-user: var(--color-secondary);
-            --chatbot-bubble-bg-bot: var(--color-light);
+            --color-primary: #9e214f;
+            --color-secondary: #3498db;
+            --color-accent: #27ae60;
+            --color-danger: #e74c3c;
+            --color-warning: #f39c12;
+            --color-light: #f5f5f5;
+            --color-dark: #333;
+            --shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            --chatbot-bg: #ffffff;
+            --chatbot-bubble-bg-user: #3498db;
+            --chatbot-bubble-bg-bot: #f0f0f0;
             --chatbot-text-user: #fff;
-            --chatbot-text-bot: var(--color-dark);
+            --chatbot-text-bot: #333;
         }
 
         /* Global resets and fonts */
