--- a/index.html
+++ b/index.html
@@ -501,6 +501,9 @@
                 border-left-color: var(--color-secondary);
                 box-shadow: 0 2px 10px rgba(0,0,0,0.2);
             }
+            label { /* MODIFICACIÓN AÑADIDA AQUÍ */
+                color: #e0e0e0; /* Asegura que las etiquetas sean visibles en modo oscuro */
+            }
             input, select, textarea {
                 background-color: #4a4a6a;
                 border-color: #5a5a7a;
@@ -676,39 +679,35 @@
                 font-size: 13px;
             }
             #offers-search-container {
-                padding: 6px 12px;
+                padding: 8px 15px;
+                border-radius: 25px;
             }
             #offers-search {
-                font-size: 15px;
-            }
-            .offer-card {
-                border-radius: 8px;
-            }
-            .offer-image-container {
-                height: 160px;
-            }
-            .offer-details {
-                padding: 12px 15px;
-                font-size: 13px;
-            }
-            .offer-title {
                 font-size: 16px;
             }
-            .offer-price {
-                font-size: 15px;
+            .offer-card {
+                border-radius: 10px;
             }
-            .seller-info {
-                font-size: 12px;
+            .offer-image-container {
+                height: 180px;
             }
-            #contact-section {
-                padding: 25px 15px;
-                font-size: 15px;
-            }
-            #contact-section .contact-item {
+            .offer-details {
+                padding: 15px;
                 gap: 10px;
             }
-            #contact-section .material-icons {
-                font-size: 22px;
+            .offer-title {
+                font-size: 18px;
+            }
+            .offer-price {
+                font-size: 16px;
+            }
+            .offer-description {
+                font-size: 14px;
+            }
+            .seller-info {
+                font-size: 13px;
+                margin-top: 10px;
+                padding-top: 10px;
             }
         }
 
@@ -1925,7 +1924,8 @@
       // Función para actualizar la lista de transacciones
       function updateTransactionList() {
         // Ordenar transacciones por fecha, más reciente primero
-        const sortedTransactions = [...transactions].sort(
+        const sortedTransactions = [...transactions].
+        sort(
           (a, b) => new Date(b.date) - new Date(a.date)
         );
 
@@ -3087,7 +3087,7 @@ Ofertas relacionadas:
             loginForm.reset();
             loginMessage.textContent = '';
             updateLoginStatus();
-            checkPartnerAccess(); // Call this after login status is updated
+            checkPartnerAccess();
           }, 1500);
 
         } else {
@@ -3171,7 +3171,7 @@ Ofertas relacionadas:
           localStorage.removeItem('currentUser');
           alert('Sesión cerrada.');
           updateLoginStatus();
-          checkPartnerAccess(); // Update partner sections visibility
+          checkPartnerAccess();
           showSection(dashboardSection);
         }
       }
@@ -3194,12 +3194,12 @@ Ofertas relacionadas:
           menuLogin.removeEventListener('click', handleLogoutClick);
           menuLogin.addEventListener('click', handleLoginClick);
           menuRegister.style.display = 'block';
-          addOfferSection.style.display = 'none'; // Hide add offer section if not logged in or not partner
+          addOfferSection.style.display = 'none';
         }
       }
 
       updateLoginStatus();
-      checkPartnerAccess(); // Initial check for partner access on page load
+      checkPartnerAccess();
     </script>
 </body>
 </html>
