--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             --border-radius: 12px;
         }
 
-        /* Global resets and fonts */
+
         * {
             margin: 0;
             padding: 0;
@@ -63,7 +63,7 @@
         h3 {
             margin-bottom: 15px;
             font-weight: 600;
-            color: white; /* Ensure headers in primary background are white */
+            color: white; 
         }
         header h1, header p {
             color: white;
