--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 border-left-color: var(--color-secondary);
                 box-shadow: 0 2px 10px rgba(0,0,0,0.2);
             }
-            label { /* MODIFICACIÓN AÑADIDA AQUÍ */
+            label { 
                 color: #e0e0e0; /* Asegura que las etiquetas sean visibles en modo oscuro */
             }
             input, select, textarea {
@@ -944,13 +944,11 @@
             }
         }
 
-        /* Animation for chat messages */
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
         }
 
-        /* Recommendations block style */
         .recommendations {
             margin-top: 20px;
             background: #e9f7ef;
@@ -994,7 +992,6 @@
             color: var(--color-secondary);
         }
 
-        /* New Offers Section Styles - Inspired by Facebook Marketplace */
          #offers-section {
             display: none;
             padding: 20px 0;
@@ -1168,7 +1165,6 @@
             text-decoration: underline;
         }
   
-        /* Responsive adjustments for offers */
         @media (max-width: 480px) {
             #offers-list {
                 grid-template-columns: 1fr;
@@ -1303,7 +1299,6 @@
         }
     </style>
 
-    <!-- Icons Material -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#9e2142" />
@@ -1654,7 +1649,7 @@
           <!-- Inserts offer cards dynamically -->
         </div>
         
-        <!-- Only show this section for partners -->
+        <!-- solo socios -->
         <div id="add-offer-section" class="card" style="display:none; margin-top: 30px;">
           <div class="card-header">
             <h2>Agregar Nueva Oferta</h2>
@@ -1693,7 +1688,7 @@
       </div>
     </div>
 
-    <!-- New Contact Section -->
+    <!-- contacto -->
     <div id="contact-section" class="section" aria-label="Información de Contacto y Soporte">
       <div class="container">
         <h2>Contacto y Soporte</h2>
@@ -2163,17 +2158,14 @@
         }, 300);
       });
 
-      // Login menu link (manejador inicial)
       menuLogin.addEventListener('click', handleLoginClick);
 
-      // Register menu link
       menuRegister.addEventListener('click', function (e) {
         e.preventDefault();
         showSection(registerSection);
         document.getElementById('reg-username').focus();
       });
 
-      // Show only the selected section and hide others
       function showSection(section) {
         dashboardSection.classList.remove('active');
         savingsSection.classList.remove('active');
@@ -2678,7 +2670,7 @@ Ofertas relacionadas:
         updateCategories();
       }
 
-      // Chatbot functionality
+      // Chatbot
       (() => {
         const chatbotMessages = document.getElementById('chatbot-messages');
         const chatbotInput = document.getElementById('chatbot-input');
@@ -2842,7 +2834,7 @@ Ofertas relacionadas:
         initChat();
       })();
 
-      // Ofertas - Solo para socios
+      // Ofertas Solo para socios
       const offerForm = document.getElementById('offer-form');
       const addOfferSection = document.getElementById('add-offer-section');
 
